--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -2,6 +2,38 @@ db.host=jdbc:mysql://localhost:3306/restaurant?useSSL=false&useJDBCCompliantTime
 db.driver=com.mysql.cj.jdbc.Driver
 db.login=root
 db.password=root
-role.create=INSERT INTO ROLE (ID, ACCESS) VALUES (?,?)
-role.select=SELECT id, access FROM role WHERE ID = ?
-role.selectAll=SELECT id, access FROM role
+dish.create=INSERT INTO dish (id, name, type, price, weight) VALUE(?,?,?,?,?)
+dish.getAll=SELECT id, name, type, price, weight FROM dish
+dish.getById=SELECT id, name, type, price, weight FROM dish where id=?
+dish.getByName=SELECT id, name, type, price, weight FROM dish where name=?
+dish.getByType=SELECT id, name, type, price, weight FROM dish where type=?
+dish.getByPrice=SELECT id, name, type, price, weight FROM dish where price=?
+dish.getByWeight=SELECT id, name, type, price, weight FROM dish where price=?
+dish.update=UPDATE dish SET name=?,type=?,price=?,weight=? WHERE id=?
+dish.remove=DELETE FROM dish WHERE id=?
+menu.create=INSERT INTO menu (id, dish_id) VALUES (?,?)
+menu.getAll=SELECT id, dish_id FROM menu
+menu.getById=SELECT id, dish_id from menu where id=?
+menu.update=UPDATE menu SET dish_id=? WHERE id=?
+menu.remove=DELETE FROM menu WHERE id=?
+role.create=INSERT INTO role (id, access) VALUES (?,?)
+role.getAll=SELECT id, access FROM role
+role.getById=SELECT id, access FROM role WHERE id = ?
+role.getByAccess=SELECT id, access FROM role WHERE access=?
+role.update=UPDATE role SET access=? WHERE id=?
+role.remove=DELETE FROM role WHERE id=?
+table.create=INSERT INTO table (id, status) VALUES (?,?)
+table.getAll=SELECT id, status FROM table
+table.getById=SELECT id,status FROM table WHERE id=?
+table.getByStatus=SELECT id,status FROM table WHERE status=?
+table.update=UPDATE table SET status=? WHERE id=?
+table.remove=DELETE FROM table WHERE id=?
+user.create=INSERT INTO user (id, name, surname, role_id) VALUES (?,?,?,?)
+user.getAll=SELECT id, name, surname, role_id FROM USER
+user.getById=SELECT id, name, surname, role_id FROM user WHERE id = ?
+user.getByName=SELECT id, name, surname, role_id FROM user WHERE name = ?
+user.getBySurname=SELECT id, name, surname, role_id FROM user WHERE surname = ?
+user.getByRole=SELECT id, name, surname, role_id FROM user WHERE role_id = ?
+user.update=UPDATE USER SET name=?, surname=?, role_id=? WHERE id=?
+user.remove=DELETE FROM user WHERE id=?
+test=
