--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -24,7 +24,7 @@ role.update=UPDATE role SET access=? WHERE id=?
 role.remove=DELETE FROM role WHERE id=?
 table.create=INSERT INTO table (id, status) VALUES (?,?)
 table.getAll=SELECT id, status FROM table
-table.getById=SELECT id,status FROM table WHERE id=?
+table.getById=SELECT id,status FROM table WHERE id= ?
 table.getByStatus=SELECT id,status FROM table WHERE status=?
 table.update=UPDATE table SET status=? WHERE id=?
 table.remove=DELETE FROM table WHERE id=?
@@ -36,4 +36,14 @@ user.getBySurname=SELECT id, name, surname, role_id FROM user WHERE surname = ?
 user.getByRole=SELECT id, name, surname, role_id FROM user WHERE role_id = ?
 user.update=UPDATE USER SET name=?, surname=?, role_id=? WHERE id=?
 user.remove=DELETE FROM user WHERE id=?
-test=
+order.create=INSERT INTO order (id, price_total, menu_id, confirm, paid, user_id, table_id) VALUES (?,?,?,?,?,?,?,?)
+order.getAll=SELECT id, price_total, menu_id, confirm, paid, user_id, table_id FROM order
+order.getById=SELECT id, price_total, menu_id, confirm, paid, user_id, table_id FROM order ID=?
+order.getByTotalPrice=SELECT id, price_total, menu_id, confirm, paid, user_id, table_id FROM order priceTotal=?
+order.getByMenuId=SELECT id, price_total, menu_id, confirm, paid, user_id, table_id FROM order menu_id=?
+order.getByConfirm=SELECT id, price_total, menu_id, confirm, paid, user_id, table_id FROM order confirm=?
+order.getByPaid=SELECT id, price_total, menu_id, confirm, paid, user_id, table_id FROM order paid=?
+order.getByUserId=SELECT id, price_total, menu_id, confirm, paid, user_id, table_id FROM order user_id=?
+order.getByTable=SELECT id, price_total, menu_id, confirm, paid, user_id, table_id FROM order table_id=?
+order.update=UPDATE order SET price_total=?, menu_id=?, confirm=?, paid=?, user_id=?, table_id=? WHERE ID=?
+order.remove=DELETE FROM order WHERE ID=?
