--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -16,27 +16,28 @@ menu.getAll=SELECT id, dish_id FROM menu
 menu.getById=SELECT id, dish_id from menu where id=?
 menu.update=UPDATE menu SET dish_id=? WHERE id=?
 menu.remove=DELETE FROM menu WHERE id=?
-role.create=INSERT INTO role (id, access) VALUES (?,?)
+role.create=INSERT INTO role (access) VALUES (?)
 role.getAll=SELECT id, access FROM role
 role.getById=SELECT id, access FROM role WHERE id = ?
 role.getByAccess=SELECT id, access FROM role WHERE access=?
 role.update=UPDATE role SET access=? WHERE id=?
 role.remove=DELETE FROM role WHERE id=?
-table.create=INSERT INTO table (id, status) VALUES (?,?)
-table.getAll=SELECT id, status FROM table
-table.getById=SELECT id,status FROM table WHERE id= ?
-table.getByStatus=SELECT id,status FROM table WHERE status=?
-table.update=UPDATE table SET status=? WHERE id=?
-table.remove=DELETE FROM table WHERE id=?
-user.create=INSERT INTO user (id, name, surname, role_id) VALUES (?,?,?,?)
+table.create=INSERT INTO `table` (id, status) VALUES (?,?)
+table.getAll=SELECT id, status FROM `table`
+table.getById=SELECT id,status FROM `table` WHERE id= ?
+table.getByStatus=SELECT id,status FROM `table` WHERE status=?
+table.update=UPDATE `table` SET status=? WHERE id=?
+table.remove=DELETE FROM `table` WHERE id=?
+user.create=INSERT INTO user (name, surname, role_id) VALUES (?,?,?)
 user.getAll=SELECT id, name, surname, role_id FROM USER
 user.getById=SELECT id, name, surname, role_id FROM user WHERE id = ?
 user.getByName=SELECT id, name, surname, role_id FROM user WHERE name = ?
 user.getBySurname=SELECT id, name, surname, role_id FROM user WHERE surname = ?
 user.getByRole=SELECT id, name, surname, role_id FROM user WHERE role_id = ?
+user.getLogin=SELECT * FROM user WHERE (email = ? and password = ?)
 user.update=UPDATE USER SET name=?, surname=?, role_id=? WHERE id=?
 user.remove=DELETE FROM user WHERE id=?
-order.create=INSERT INTO order (id, price_total, menu_id, confirm, paid, user_id, table_id) VALUES (?,?,?,?,?,?,?,?)
+order.create=INSERT INTO order (price_total, menu_id, confirm, paid, user_id, table_id) VALUES (?,?,?,?,?,?,?)
 order.getAll=SELECT id, price_total, menu_id, confirm, paid, user_id, table_id FROM order
 order.getById=SELECT id, price_total, menu_id, confirm, paid, user_id, table_id FROM order ID=?
 order.getByTotalPrice=SELECT id, price_total, menu_id, confirm, paid, user_id, table_id FROM order priceTotal=?
