--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -28,7 +28,7 @@ table.getById=SELECT id,status FROM `table` WHERE id= ?
 table.getByStatus=SELECT id,status FROM `table` WHERE status=?
 table.update=UPDATE `table` SET status=? WHERE id=?
 table.remove=DELETE FROM `table` WHERE id=?
-user.create=INSERT INTO user (name, surname, role_id) VALUES (?,?,?)
+user.create=INSERT INTO user (email, password, role_id) VALUES (?,?,?)
 user.getAll=SELECT id, name, surname, role_id FROM USER
 user.getById=SELECT id, name, surname, role_id FROM user WHERE id = ?
 user.getByName=SELECT id, name, surname, role_id FROM user WHERE name = ?
