--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -5,36 +5,38 @@
          version="4.0">
     <display-name>Restaurant</display-name>
     <welcome-file-list>
-        <welcome-file>index.jsp</welcome-file>
+        <welcome-file>/views/index.jsp</welcome-file>
     </welcome-file-list>
 
     <servlet>
-        <servlet-name>Hello</servlet-name>
-        <jsp-file>/index.jsp</jsp-file>
+        <servlet-name>home</servlet-name>
+        <jsp-file>/views/index.jsp</jsp-file>
     </servlet>
     <servlet>
-        <servlet-name>Login</servlet-name>
-        <jsp-file>/login.jsp</jsp-file>
+        <servlet-name>login</servlet-name>
+        <jsp-file>/views/login.jsp</jsp-file>
     </servlet>
     <servlet>
-        <servlet-name>Registration</servlet-name>
-        <jsp-file>/registration.jsp</jsp-file>
+        <servlet-name>registration</servlet-name>
+        <jsp-file>/views/registration.jsp</jsp-file>
     </servlet>
-
 
     <servlet-mapping>
-        <servlet-name>Login</servlet-name>
+        <servlet-name>home</servlet-name>
+        <url-pattern>/</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>login</servlet-name>
         <url-pattern>/login</url-pattern>
     </servlet-mapping>
-
     <servlet-mapping>
-        <servlet-name>Hello</servlet-name>
-        <url-pattern>/index</url-pattern>
+        <servlet-name>registration</servlet-name>
+        <url-pattern>/registration</url-pattern>
     </servlet-mapping>
 
     <servlet-mapping>
-        <servlet-name>Registration</servlet-name>
-        <url-pattern>/registration</url-pattern>
+        <servlet-name>default</servlet-name>
+        <url-pattern>*.css</url-pattern>
     </servlet-mapping>
 </web-app>
 
